--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,5 +1,5 @@
-{{ include('layout/header.html.twig') }}
-	{{ include('layout/navigation.html.twig') }}
+{% extends "base.html.twig" %}
+{% block body %}
 	<header class="d-flex flex-column flex-md-row align-items-md-center p-5 bg-light">
 		<div class="pt-md-3 pb-md-4">
 			<h1 class="display-4">Time Card</h1>
@@ -9,4 +9,4 @@
 			<a class="btn btn-primary btn-lg" href="">Get started!.</a>
 		</div>
 	</header>
-{{ include('layout/footer.html.twig') }}
+{% endblock %}
